--- a/css/style.css
+++ b/css/style.css
@@ -7,13 +7,51 @@
     box-sizing: border-box;
     font-family: 'Merriweather', serif;
 }
+/* Add background to main */
+body{
+    background-color: rgb(230, 230, 230);
+}
+/* CSS Header */
+/* Add background to header */
+header{
+    background-color: #fff;
+}
+/* logo header */
 .logo{
     margin: 10px 20px;
     vertical-align: middle;
 }
+/* Text header */
 h1{
     display: inline-block;
     vertical-align: middle;
     font-weight: 800;
     font-size: 35px;
+}
+/* CSS main */
+/* Spacing main content */
+.container{
+    width: 70%;
+    margin: 0 auto;
+}
+/* Header of main */
+.head-main{
+    margin-top: 50px;
+    padding: 10px 30px;
+    background-color: #fff;
+}
+/* Button blue */
+.btn{
+    padding: 7px 10px;
+    border: none;
+    background-color: deepskyblue;
+    color: #fff;
+    font-size: 12px;
+    border-radius: 5px;
+}
+/* Button white */
+.white{
+    border: 1px lightgrey solid;
+    background-color: #fff;
+    color: lightgray;
 }
