--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ li{
     font-size: 12px;
 }
 /* List item check */
-.id{
+.status{
     border-radius: 50%;
     font-size: 10px;
     text-align: center;
